2013-09-24 Ezequiel Vázquez De la calle <ezequielvazq@gmail.com>
  * Fix mutex lock and device reference output on Monitor class

2013-09-18 Ezequiel Vázquez De la calle <ezequielvazq@gmail.com>
  * Add settings file support for MySQL credentials

2013-09-17 Ezequiel Vázquez De la calle <ezequielvazq@gmail.com>
  * First release of swarm
